--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   
 </body>
-<script src="exercicio1.js"></script>
+<!-- <script src="exercicio1.js"></script> -->
+<script src="exercicio2.js"></script>
 </html>
