Using aspas at strings

--- a/Exercicio 1 - Variaveis/index.html
+++ b/Exercicio 1 - Variaveis/index.html
@@ -9,6 +9,5 @@
 <body>
   
 </body>
-<!-- <script src="exercicio1.js"></script> -->
-<script src="exercicio2.js"></script>
+<script src="index.js"></script>
 </html>
